--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "1.0.6",
+    "@radix-ui/react-scroll-area": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
+    "axios": "^1.4.0",
     "electron-is-dev": "^1.1.0",
     "electron-next": "^3.1.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.6.2"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
