--- a/renderer/tsconfig.json
+++ b/renderer/tsconfig.json
@@ -20,6 +20,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/documentation.mdx"],
   "exclude": ["node_modules"]
 }
