--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "autoprefixer": "^10.4.14",
     "electron": "^25.0.1",
     "electron-builder": "^24.4.0",
-    "next": "^13.4.4",
+    "eslint-config-next": "^13.4.6",
+    "next": "^13.4.6",
     "postcss": "^8.4.24",
     "rimraf": "^5.0.1",
     "tailwindcss": "^3.3.2",
