--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "private": true,
   "main": "main/index.js",
+  "version": "0.0.1",
+  "name": "portfolio",
   "productName": "ElectronTypescriptNext",
   "scripts": {
     "clean": "rimraf dist main renderer/out renderer/.next",
@@ -22,6 +24,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "1.0.6",
     "@radix-ui/react-scroll-area": "^1.0.4",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
@@ -31,6 +34,7 @@
     "electron-next": "^3.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-financial-charts": "^2.0.1",
     "react-redux": "^8.1.0",
     "recharts": "^2.6.2"
   },
@@ -42,7 +46,7 @@
     "electron": "^25.0.1",
     "electron-builder": "^24.4.0",
     "eslint-config-next": "^13.4.6",
-    "next": "^13.4.6",
+    "next": "13.4.2",
     "postcss": "^8.4.24",
     "rimraf": "^5.0.1",
     "tailwindcss": "^3.3.2",
