--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-tooltip": "^1.0.6",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "electron-is-dev": "^1.1.0",
     "electron-next": "^3.1.5",
     "lightweight-charts": "^4.0.1",
