--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "type-check": "tsc -p ./renderer/tsconfig.json && tsc -p ./electron-src/tsconfig.json"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.16",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.4.5",
@@ -33,6 +34,7 @@
     "date-fns": "^2.30.0",
     "electron-is-dev": "^1.1.0",
     "electron-next": "^3.1.5",
+    "graphql": "^16.7.1",
     "lightweight-charts": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
