--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@next/mdx": "^13.4.5",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "1.0.6",
