--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.0",
-    "recharts": "^2.6.2"
+    "recharts": "^2.6.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
